@@ -28,7 +28,13 @@ dependencies {
 	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 	testImplementation('org.junit.jupiter:junit-jupiter-params:5.8.1')
 	testImplementation 'org.mockito:mockito-core:3.12.4'
-	testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
+	// https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.0-M1'
+
+//	testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
+//	mockito-junit-jupiter
+// https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+	testImplementation 'org.mockito:mockito-junit-jupiter:4.6.0'
 
 //	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 
@@ -42,14 +48,18 @@ dependencyManagement {
 	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
+//
+//test {
+//	useJUnitPlatform()
+//}
+//tasks.test {
+//	useJUnitPlatform()
+//}
 
-test {
+tasks.withType(Test) {
 	useJUnitPlatform()
+	jvmArgs '--enable-preview'
 }
-tasks.test {
-	useJUnitPlatform()
-}
-
